# robintuk

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: index.md
assets/screenshots/: index.md
src/: App.css  App.tsx  globalValues.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_settings.sql  0003_artists.sql  9999_reset.sql
src-tauri/src/: commands.rs  db.rs  helper.rs  lib.rs  main.rs  music.rs  types.rs
src/components/: customContextMenu.tsx  imageFallback.tsx  musicControls.tsx  popups.tsx  rightSideBar.tsx  songDetails.tsx
src/components/fileSystem/: convertFileToImage.tsx  customWindowsBar.tsx
src/components/lists/: albumVirtualization.tsx  listVirtualization.tsx
src/componets/: musicControls.tsx  removeSpecialCharacters.tsx  themeOptions.tsx
src/componets/fileSystem/: convertFileToImage.tsx  customWindowsBar.tsx  pathSelector.tsx
src/componets/lists/: listVirtualization.tsx
src/pages/: albums.tsx  artists.tsx  genres.tsx  history.tsx  home.tsx  playlist.tsx  queue.tsx  settings.tsx  songs.tsx
src/pages/details/: albumDetails.tsx  artistDetails.tsx  genreDetails.tsx  playlistDetails.tsx
src/pages/lyrics/: LRCLIBSearch.tsx  lyricSearch.tsx
src/pages/playlists/: playlist.tsx
