[package]
name = "robintuk_player"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "robintuk_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.42"
walkdir = "2.5.0"
sqlx = { version = "0.8.6", features = ["sqlite"] }
dirs = "6.0.0"
tokio = "1.48.0"
symphonia = { version = "0.5.5", features = ["all"] }
uuid = { version = "1.18.1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-cache = "0.1.5"
tauri-plugin-store = "2"
tauri-plugin-prevent-default = "4"
rodio = {version="0.21.1", features = [ "symphonia-all"] }
serde_with = "3.15.1"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
zip = "7.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
